# weather-cli

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CNAME  DISTRIBUTION.md  ISSUES_RESOLUTION.md  LICENSE  PRE_COMMIT_SETUP.md  PYPI.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup-dev.sh  setup.py
docs/: pre-commit-guide.md
homebrew/: weather-cli.rb
scripts/: build-pypi.sh  get-sha256.sh
tests/: conftest.py  test_location.py
weather/: __init__.py  cache.py  config.py  location.py  main.py
weather/formatters/: __init__.py  ascii.py  base.py  minimal.py  raw.py  simple.py  table.py  visual.py
weather/sources/: __init__.py  base.py  nws.py  open_meteo.py  wttr.py
weather/utils/: __init__.py  date_utils.py  exceptions.py  http.py  units.py
